Temporary fix for overflowed subdomains Other minor styling fixes

--- a/cilantro/static/cilantro/stylesheets/scss/define.scss
+++ b/cilantro/static/cilantro/stylesheets/scss/define.scss
@@ -22,8 +22,6 @@
 
 #center-pane {
     min-height: 300px;
-    position: relative;
-    overflow: auto;
 }
 
 #right-pane {
@@ -104,6 +102,10 @@
     font-size: 0.9em;
     font-weight: 600;
 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     // when visible, this will cover up the single pixel bottom
     // border of the active domain, thus making it appear flush with
     // the rest of the domain tabs
@@ -137,6 +139,7 @@
 #criteria-wrap {
     padding: 2px;
     width: 170px;
+    margin: 0;
     margin-top: 5px;
     display: none;
 }
@@ -241,9 +244,9 @@
 }
 
 #plugin-panel {
-    margin-top: 5px;
+    margin: 0;
     float: right;
-    width: 520px;
+    width: 515px;
     display: none;
 
     .content {
